feat-products: first-progress for store product module (#1)
